--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <select name="algorithm" id="alg">
         <option value="shuffle">Shuffle</option>
         <option value="invert">Invert</option>
+        <option value="bogo">Bogo</option>
         <option value="bubble">Bubble</option>
         <option value="insertion">Insertion</option>
         <option value="selection">Selection</option>
