made seperation between rects toggleable

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <div id="main"></div>
+    <div id="main" class="main-mod"></div>
 
     <input type="input" id="count" placeholder="count">
     <input type="button" value="Generate" id="generate"><br>
@@ -24,6 +24,7 @@
         <option value="quick">Quick</option>
     </select>
     <input type="button" value="SORT!!!" id="sort">
-    <input type="button" value="STOP!!!" id="stop-sort">
+    <input type="button" value="STOP!!!" id="stop-sort"><br>
+    <input type="button" value="Switch visual mode" id="switch-mode">
 </body>
 </html>
