changed name of switch-mode button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </select>
     <input type="button" value="SORT!!!" id="sort">
     <input type="button" value="STOP!!!" id="stop-sort"><br>
-    <input type="button" value="Switch visual mode" id="switch-mode">
+    <input type="button" value="Toggle border" id="switch-mode">
 </body>
 </html>
