changed count field to be a type of number

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="main" class="main-mod"></div>
 
-    <input type="input" id="count" placeholder="count">
+    <input type="number" id="count" value="100">
     <input type="button" value="Generate" id="generate"><br>
 
     <select name="algorithm" id="alg">
