added working bnr downloader

--- a/bnr_downloader/index.html
+++ b/bnr_downloader/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BNR downloader</title>
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <h1>BNR downloader</h1>
+    <label>url: </label>
+    <input type="text" id="url-input">
+    <button id="search">Find mp3s</button>
+    <div id="results"></div>
 </body>
 </html>
