--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./sort">sorter</a></li>
         <li><a href="./bnr_downloader/">BNR downloader</a></li>
+        <li><a href="./clock/">clock 🐔</a></li>
     </ul>
 </body>
 </html>
