--- a/clock/index.html
+++ b/clock/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BNR downloader</title>
-    <script src="index.js" defer></script>
+    <title>C(l)ock moment 😳</title>
+    <script src="index.js" type="module" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <label>url: </label>
-    <input type="text" id="url-input">
-    <button id="search">Find mp3s</button>
-    <div id="results"></div>
+    <div id="time"></div>
 </body>
 </html>
