minor change to /enc

--- a/enc/index.html
+++ b/enc/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send a message</title>
+    <title>Encryption thing</title>
     <script src="index.js" type="module" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Password shenanagins</h1>
+    <h1>Encryption shenanagins</h1>
     <section>
         <p>
             Password: <input type="password" id="password">
