added link to /enc on the main page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="./sort">sorter</a></li>
         <li><a href="./bnr_downloader/">BNR downloader</a></li>
         <li><a href="./clock/">clock 🐔</a></li>
+        <li><a href="./enc/">enc 🔒</a></li>
     </ul>
 </body>
 </html>
