minor change to /clock

--- a/clock/index.html
+++ b/clock/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="time"></div>
+    <div class="main"><div id="time"></div></div>
 </body>
 </html>
