--- a/clock/index.html
+++ b/clock/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main"><div id="time"></div></div>
+    <div class="main">
+        <div id="time"></div>
+    </div>
 </body>
 </html>
