--- a/enc/index.html
+++ b/enc/index.html
@@ -9,25 +9,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Encryption shenanagins</h1>
-    <section>
-        <p>
-            Password: <input type="password" id="password">
-            <input type="button" value="unlock" id="keygen">
-            <input type="button" value="show key" id="show-key">
-        </p>
-    </section>
-    <div>
-        <textarea id="to-encrypt"></textarea><br>
-        <label for="encrypted">Encrypted: </label>
-        <span id="encrypted"></span>
-    </div>
-    <br>
-    <br>
-    <div>
-        <textarea id="to-decrypt"></textarea><br>
-        <label for="decrypted">Decrypted: </label>
-        <div id="decrypted"></div>
+    <main>
+        <h1>Encryption shenanagins</h1>
+        <section>
+            <p>
+                Password: <input type="password" id="password">
+                <input type="button" value="unlock" id="keygen">
+                <input type="button" value="show key" id="show-key">
+            </p>
+        </section>
+        <div>
+            <textarea rows="4" cols="50" id="to-encrypt"></textarea><br>
+            <label for="encrypted">Encrypted: </label>
+            <code id="encrypted"></code>
+        </div>
+        <br>
+        <br>
+        <div>
+            <textarea rows="4" cols="50" id="to-decrypt"></textarea><br>
+            <label for="decrypted">Decrypted: </label>
+            <div id="decrypted"></div>
+        </div>
+    </main>
     </div>
 </body>
 </html>
