fixed base64 encoding and decoding, and limited width of output fields

--- a/enc/index.html
+++ b/enc/index.html
@@ -21,14 +21,14 @@
         <div>
             <textarea rows="4" cols="50" id="to-encrypt"></textarea><br>
             <label for="encrypted">Encrypted: </label>
-            <code id="encrypted"></code>
+            <span id="encrypted" class="output"></span>
         </div>
         <br>
         <br>
         <div>
             <textarea rows="4" cols="50" id="to-decrypt"></textarea><br>
             <label for="decrypted">Decrypted: </label>
-            <div id="decrypted"></div>
+            <div id="decrypted" class="output"></div>
         </div>
     </main>
     </div>
