made the time the main focus

--- a/clock/index.html
+++ b/clock/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="main">
-        <div id="time"></div>
+        <div>
+            <div id="time"></div>
+            <div id="date">Bruh shit fr</div>
+        </div>
     </div>
 </body>
 </html>
