--- a/clock/index.html
+++ b/clock/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div>
             <div id="time"></div>
-            <div id="date">Bruh shit fr</div>
+            <div id="date"></div>
         </div>
     </div>
 </body>
