added file support for webhook sender

--- a/webhook/index.html
+++ b/webhook/index.html
@@ -12,6 +12,8 @@
     <button id="unlock">unlock</button>
     <br>
     <textarea rows="4" cols="50" id="text"></textarea><button id="send">send</button>
+    <br>
+    <input id="files" type="file" name="filefield" multiple="multiple">
     <code>
         <div id="response"></div>
     </code>
