added reset files button for webhook sender

--- a/webhook/index.html
+++ b/webhook/index.html
@@ -13,7 +13,7 @@
     <br>
     <textarea rows="4" cols="50" id="text"></textarea><button id="send">send</button>
     <br>
-    <input id="files" type="file" name="filefield" multiple="multiple">
+    <input id="files" type="file" name="filefield" multiple="multiple"><button id="reset-files">Remove files</button>
     <code>
         <div id="response"></div>
     </code>
