--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="./clock/">clock 🐔</a></li>
         <li><a href="./enc/">enc 🔒</a></li>
         <li><a href="./webhook/">webhook sender</a></li>
+        <li><a href="./mathemphetamine/">math</a></li>
     </ul>
 </body>
 </html>
