--- a/sort/index.html
+++ b/sort/index.html
@@ -9,7 +9,7 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <div id="main" class="main-mod"></div>
+    <canvas id="main" class="main-mod"></canvas>
 
     <input type="number" id="count" value="100">
     <input type="button" value="Generate" id="generate"><br>
@@ -25,6 +25,5 @@
     </select>
     <input type="button" value="SORT!!!" id="sort">
     <input type="button" value="STOP!!!" id="stop-sort"><br>
-    <input type="button" value="Toggle border" id="switch-mode">
 </body>
 </html>
