added button for getting a message in /webhook/

--- a/webhook/index.html
+++ b/webhook/index.html
@@ -14,6 +14,8 @@
     <textarea rows="4" cols="50" id="text"></textarea><button id="send">send</button>
     <br>
     <input id="files" type="file" name="filefield" multiple="multiple"><button id="reset-files">Remove files</button>
+	<br>
+	<input type="text" id="message-id"><button id="get">Get message</button>
     <code>
         <div id="response"></div>
     </code>
