--- a/enc/index.html
+++ b/enc/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encryption thing</title>
-    <script src="index.js" type="module" defer></script>
+    <script src="index.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,6 +31,5 @@
             <div id="decrypted" class="output"></div>
         </div>
     </main>
-    </div>
 </body>
 </html>
