--- a/webhook/index.html
+++ b/webhook/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webhook sender thing</title>
-    <script src="index.js" type="module" defer></script>
+    <script src="index.js" type="module"></script>
 </head>
 <body>
     <input type="password" id="password">
@@ -16,8 +16,9 @@
     <input id="files" type="file" name="filefield" multiple="multiple"><button id="reset-files">Remove files</button>
 	<br>
 	<input type="text" id="message-id"><button id="get">Get message</button>
+    <br>
     <code>
-        <div id="response"></div>
+        <span id="response"></span>
     </code>
 </body>
 </html>
